# application/services/custom_services/apigateway/src/apicontroller/execrisedetailsController.ts
@@ -13,30 +13,15 @@ export class execrisedetailsController implements Controller {
     }
 
     private initializeRoutes() {
-        this.router.get('/execrisedetails/get/search', this.GpSearch);
-this.router.delete('/execrisedetails/:id', this.GpDelete);
-this.router.put('/execrisedetails/get/update', this.GpSearchForUpdate);
+        this.router.delete('/execrisedetails/:id', this.GpDelete);
 this.router.get('/execrisedetails/get/search', this.GpSearch);
-this.router.put('/execrisedetails', this.GpUpdate);
 this.router.put('/execrisedetails/get/update', this.GpSearchForUpdate);
-this.router.get('/execrisedetails/:id', this.GpGetNounById);
 this.router.put('/execrisedetails', this.GpUpdate);
-this.router.get('/execrisedetails', this.GpGetAllValues);
 this.router.get('/execrisedetails/:id', this.GpGetNounById);
+this.router.get('/execrisedetails', this.GpGetAllValues);
 this.router.post('/execrisedetails', this.GpCreate);
     }
 
-public GpSearch(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpSearch');
-        new ApiAdapter().get(Constant.WORKOUTURL + `${req.url}` )
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpSearch');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
 public GpDelete(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpDelete');
         new ApiAdapter().delete(Constant.WORKOUTURL + `${req.url}` )
@@ -48,17 +33,6 @@ public GpDelete(req: Request, res: Response) {
             res.send(err);
         });
     }
-public GpSearchForUpdate(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpSearchForUpdate');
-        new ApiAdapter().put(Constant.WORKOUTURL + `${req.url}` , req.body)
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpSearchForUpdate');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
 public GpSearch(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpSearch');
         new ApiAdapter().get(Constant.WORKOUTURL + `${req.url}` )
@@ -70,17 +44,6 @@ public GpSearch(req: Request, res: Response) {
             res.send(err);
         });
     }
-public GpUpdate(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpUpdate');
-        new ApiAdapter().put(Constant.WORKOUTURL + `${req.url}` , req.body)
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpUpdate');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
 public GpSearchForUpdate(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpSearchForUpdate');
         new ApiAdapter().put(Constant.WORKOUTURL + `${req.url}` , req.body)
@@ -92,17 +55,6 @@ public GpSearchForUpdate(req: Request, res: Response) {
             res.send(err);
         });
     }
-public GpGetNounById(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpGetNounById');
-        new ApiAdapter().get(Constant.WORKOUTURL + `${req.url}` )
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpGetNounById');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
 public GpUpdate(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpUpdate');
         new ApiAdapter().put(Constant.WORKOUTURL + `${req.url}` , req.body)
@@ -114,17 +66,6 @@ public GpUpdate(req: Request, res: Response) {
             res.send(err);
         });
     }
-public GpGetAllValues(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpGetAllValues');
-        new ApiAdapter().get(Constant.WORKOUTURL + `${req.url}` )
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpGetAllValues');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
 public GpGetNounById(req: Request, res: Response) {
             new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpGetNounById');
         new ApiAdapter().get(Constant.WORKOUTURL + `${req.url}` )
@@ -132,32 +73,6 @@ public GpGetNounById(req: Request, res: Response) {
               req.baseUrl === '/mobile' ? res.send(result) :
               req.baseUrl === '/web' ? res.send(result) : res.send(null)
             new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpGetNounById');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
-public GpCreate(req: Request, res: Response) {
-            new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: GpCreate');
-        new ApiAdapter().post(Constant.WORKOUTURL + `${req.url}` , req.body)
-        .then((res: any) => res.response.json()).then(result => {
-              req.baseUrl === '/mobile' ? res.send(result) :
-              req.baseUrl === '/web' ? res.send(result) : res.send(null)
-            new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: GpCreate');
-        }).catch(err => {
-            res.send(err);
-        });
-    }
-
-
-
-
-
-
-
-
-}
-
-lsController.ts: GpCreate');
         }).catch(err => {
             res.send(err);
         });
