# application/services/custom_services/workout/src/controller/execrisedetailsController.ts
@@ -55,48 +55,6 @@ execrisedetails.(req, (response) => {
      res.json(response);
                 new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
     })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
-public (req: Request, res: Response) {
-execrisedetails.(req, (response) => {
-                new CustomLogger().showLogger('info', 'Enter into execrisedetailsController.ts: ');
-     res.status(200);
-     res.json(response);
-                new CustomLogger().showLogger('info', 'Exit from execrisedetailsController.ts: ');
-    })}
 
 
 }
